--- a/index.html
+++ b/index.html
@@ -36,12 +36,14 @@
 <footer>
 <p class="copyright-text">&copy; copyright 2024 - Challenge Encriptador de texto - desarrollado por M.Simon</p>
 <div class="social-icons">
-<a href="https://github.com/antex09/encript_texto.git" target="_blank">
-    <img src="github.svg" alt="Logo de Github" class="github" style="width: 30px;height: 50px;">
+<a href="https://github.com/antex09/challenge-1.git" target="_blank">
+    <img src="github.svg" alt="Logo de Github" class="github" style="width: 40px;height: 50px;">
 </a>
 <a href="https://www.linkedin.com/in/migue-simon" target="_blank">
     <img src="linkedin.svg" alt="Logo de linkedin" class="linkedin" style="width: 30px;height: 50px;">
 </a>
+<a href="https://mail.google.com/mail/?view=cm&fs=1&to=migueslon.payne@gmail.com">
+    <img src="gmail.svg" class="gmail" target="_blank" style="width: 40px; height: 50px;">
 </div>
 </footer>
     <script src="scripts.js"></script>
