--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </section>
 </main>
 <footer>
-<p class="copyright-text">&copy; copyright 2024 - Challenge Encriptador de texto - desarrollado por M.Simon</p>
+<p class="copyright-text">&copy; copyright 2024 - Challenge Encriptador de texto - desarrollado por Miguelson Simon</p>
 <div class="social-icons">
 <a href="https://github.com/antex09/challenge-1.git" target="_blank">
     <img src="github.svg" alt="Logo de Github" class="github" style="width: 40px;height: 50px;">
