--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <a href="https://github.com/antex09/challenge-1.git" target="_blank">
     <img src="github.svg" alt="Logo de Github" class="github" style="width: 40px;height: 50px;">
 </a>
-<a href="https://www.linkedin.com/in/migue-simon" target="_blank">
+<a href="https://www.linkedin.com/in/migue-simone" target="_blank">
     <img src="linkedin.svg" alt="Logo de linkedin" class="linkedin" style="width: 30px;height: 50px;">
 </a>
 <a href="https://mail.google.com/mail/?view=cm&fs=1&to=migueslon.payne@gmail.com">
